syntax = "proto3";

message CheckinInfo {
    repeated string ips = 1;
    string platform = 2;
    string user = 3;
    string host = 4;
    uint32 pid = 5;
    Architecture architecture = 6;
    string domain = 7;
    uint32 integrity_level = 8;
    string process_name = 9;
}

enum Architecture {
    X86 = 0;
    AMD64 = 1;
}
